# WanVideo_Serverless_Runpod

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  server.py  test_client.py  test_input.json  wan_inference_utils.py
ComfyUI/comfy/: model_patcher.py
ComfyUI/custom_nodes/WanVideoWrapper/: latent_preview.py
scripts/: WanVideo_Serverless_Runpod.ipynb  download.py  download_list.txt
