[project]
name = "wanvideo-runpod"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "sky24h", email = "hytian2@gmail.com" },
]
requires-python = ">=3.10,<3.13"

dependencies = [
    "runpod==1.7.10",
    "torch==2.7.0",
    "torchvision==0.22.0",
    "torchaudio==2.7.0",
    "imageio[ffmpeg]==2.37.0",
    "imageio-ffmpeg==0.6.0",
    "safetensors==0.5.2",
    "einops==0.8.1",
    "transformers==4.52.4",
    "accelerate==1.3.0",
    "xformers==0.0.30",
    "diffusers==0.33.1",
    "huggingface-hub==0.32.4",
    "numpy==1.26.4",
    "tokenizers==0.21.0",
    "sentencepiece==0.2.0",
    "tqdm==4.67.1",
    "ftfy==6.3.1",
    "sageattention==1.0.6",
    "opencv-python==4.11.0.86",
]

[tool.ruff]
# Ruff only supports pyproject.toml, not setup.cfg.
# Implicit configurations as default: https://docs.astral.sh/ruff/configuration/
lint.select = [
    "W",   # pycodestyle warnings
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "S",   # flake8-bandit
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "I",   # isort
    "C90", # mccabe complexity
    "N",   # pep8-naming
    "UP",  # pyupgrade
]
# Allow automatic fixes for all fixable issues
lint.fixable = ["ALL"]
# Same as MacBookPro (15inch) and IDEs, 1920px full width.
line-length = 144

[tool.mypy]
# ref: https://mypy.readthedocs.io/en/stable/config_file.html
exclude = ["setup.py"]
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true
# message format
show_column_numbers = true
show_error_code_links = true
pretty = true

[tool.hatch.build.targets.wheel]
packages = ["src/skit"]
